fixing contrast and a few tweaks...

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -39,7 +39,7 @@
   --bg: #363636;
   --bg-darker: #333333;
   --bg-darkest: #222222;
-  --text: #9C9C9D;
+  --text: #A0A0A2;
   --header: #79808A;
   --alt1: #627A78;
   --alt2: #79808A;
